Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,38 +1,40 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+
     <title>Wikiline by aurbano</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
+
+    <header>
+      <div class="container">
         <h1>Wikiline</h1>
-        <p>A global timeline created from Wikipedia</p>
+        <h2>A global timeline created from Wikipedia</h2>
 
-        <p class="view"><a href="https://github.com/aurbano/Wikiline">View the Project on GitHub <small>aurbano/Wikiline</small></a></p>
+        <section id="downloads">
+          <a href="https://github.com/aurbano/Wikiline/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/aurbano/Wikiline/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/aurbano/Wikiline" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
 
-
-        <ul>
-          <li><a href="https://github.com/aurbano/Wikiline/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/aurbano/Wikiline/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/aurbano/Wikiline">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h1>Wikiline</h1>
+    <div class="container">
+      <section id="main_content">
+        <h1>
+<a name="wikiline" class="anchor" href="#wikiline"><span class="octicon octicon-link"></span></a>Wikiline</h1>
 
 <p>A global timeline created from Wikipedia</p>
 
-<h3>Workflow</h3>
+<h3>
+<a name="workflow" class="anchor" href="#workflow"><span class="octicon octicon-link"></span></a>Workflow</h3>
 
 <p>Let's try to work with some guidelines. Once we have something sort of working, we will commit new stuff to a new branch. So if you are improving the way the parser works, you might create a new branch "parser".
 Once you are sure it works, you will select "Pull request", and someone else will take a look at it, to ensure we don't put bugs into final version.</p>
@@ -41,12 +43,8 @@ Once you are sure it works, you will select "Pull request", and someone else wil
 
 <p>Everything that's in the master branch should be ready for upload and ideally bug-free</p>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/aurbano">aurbano</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
   </body>
 </html>
